@@ -10,6 +10,7 @@ Version 1.6:
 
 +Fix issue with run list not updating to enabled state properly when saving some
 files for the first time.
++Add logging of error messages when run command fails.
 
 #-----------------------------------------------------------------------------#
 Version 1.5:
